# MadKV

./: .gitignore  README.md  install_core.sh
impl/: CMakeLists.txt  common.cmake
impl/benchmarking/client-microbenchmarking/p1/: bench_1_a_client.txt  bench_1_b_client.txt  bench_1_c_client.txt  bench_1_d_client.txt  bench_1_e_client.txt  bench_1_f_client.txt
impl/benchmarking/p1/: roundtriptimestatgeneration.py
impl/benchmarking/server-microbenchmarking/: fuzz_1_no
impl/benchmarking/server-microbenchmarking/p1/: bench_1_a  bench_1_b  bench_1_c  bench_1_d  bench_1_e  bench_1_f
impl/include/: clientimpl.h  clustermanager.h  dbClient.h  dbserviceimpl.h  raft.h  serverimpl.h
impl/protos/: clustermanagerservice.proto  kvstore.proto  raft.proto
impl/src/: clientimpl.cc  clustermanager.cc  dbClient.cc  dbTestClient.cc  dbserviceimpl.cc  kvstore_test.cc  raft.cc  serverimpl.cc
justmod/: proj1.just  proj2.just  proj3.just  serverStartUp2partitions3rf.sh
report/: parser.py  proj1.md  proj2.html  proj2.md  proj3.html  proj3.md
sumgen/: proj1.py  proj2.py  proj3.py
tests/: test1.txt  test1_conflicting.txt  test2.txt  test2_conflicting.txt
